@@ -85,6 +85,10 @@ Release 1.1 (in development)
 Release 1.0.7 (in development)
 ==============================
 
+* #590: Fix inline display of graphviz diagrams in LaTeX output.
+
+* #589: Build using app.build() in setup command.
+
 * Fix a bug in the inheritance diagram exception that caused base
   classes to be skipped if one of them is a builtin.
 
